# SMC100

./: gui.py  pyproject.toml
smc100/: controller.py
